[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/MicroWhite.fnt" type="BitmapFont" id=1]
[ext_resource path="res://UI/window_style.tres" type="StyleBox" id=2]
[ext_resource path="res://Event/ShopItem.gd" type="Script" id=3]

[node name="Container2" type="Container"]
margin_left = 40.0
margin_top = 40.0
margin_right = 188.0
margin_bottom = 168.0
rect_min_size = Vector2( 148, 128 )
script = ExtResource( 3 )

[node name="Button1" type="Button" parent="."]
margin_right = 142.0
margin_bottom = 48.0
rect_min_size = Vector2( 148, 108 )
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 56.0
margin_top = 32.0
margin_right = 104.0
margin_bottom = 80.0
rect_min_size = Vector2( 48, 48 )
mouse_filter = 2

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 52.0
margin_top = 42.0
margin_right = 72.0
margin_bottom = 62.0
rect_min_size = Vector2( 20, 20 )
mouse_filter = 2

[node name="TextureRect3" type="TextureRect" parent="."]
margin_left = 76.0
margin_top = 42.0
margin_right = 96.0
margin_bottom = 62.0
rect_min_size = Vector2( 20, 20 )
mouse_filter = 2

[node name="Information" type="Label" parent="."]
margin_left = 14.0
margin_top = 12.0
margin_right = 134.0
margin_bottom = 60.0
rect_min_size = Vector2( 120, 48 )
custom_fonts/font = ExtResource( 1 )
text = "Item Name"
align = 1
autowrap = true

[node name="Button2" type="Button" parent="."]
margin_left = 24.0
margin_top = 80.0
margin_right = 124.0
margin_bottom = 128.0
rect_min_size = Vector2( 100, 48 )
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )

[node name="CostText" type="RichTextLabel" parent="."]
margin_top = 96.0
margin_right = 148.0
margin_bottom = 120.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Buy[/center]"
text = "Buy"

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
